--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,9 +3,10 @@ name: CI/CD Pipeline - Docker Build & Push
 on:
   push:
     branches:
-      - main   # Trigger on push to main branch
+      - master   # Trigger on push to main branch
   pull_request:
-
+    branches:
+      -master 
 jobs:
   docker:
     runs-on: ubuntu-latest
